--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,6 +69,11 @@ test-machine-learning-package:
   script:
   - python3 -m simulation.utils.machine_learning.models.test
   - python3 -m simulation.utils.machine_learning.cycle_gan.models.test
+    # Test if the camera publishes images with the cycle gan turned on
+  - dvc pull simulation/utils/machine_learning/cycle_gan/checkpoints/dr_drift_256/latest_net_g_b_to_a.pth
+  - git lfs pull --include=simulation/utils/machine_learning/cycle_gan/resources/mask.png
+  - rostest simulation_brain_link sensor_camera.test apply_gan:=true use_wasserstein_gan:=false
+  - rostest simulation_brain_link sensor_camera.test apply_gan:=true use_wasserstein_gan:=true
 
 test-ros-packages:
   stage: test
