--- a/simulation/src/simulation_brain_link/CMakeLists.txt
+++ b/simulation/src/simulation_brain_link/CMakeLists.txt
@@ -205,5 +205,5 @@ INCLUDE(src/sensor_camera_deprecated/CMakeLists.txt)
 if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
   add_rostest(launch/test/vehicle_simulation_link.test)
-
+  add_rostest(launch/test/sensor_camera.test)
 endif()
