groundtruth, road&speaker: Add Ids and description to all road elements

--- a/simulation/src/simulation_groundtruth/param/label_camera/default.yaml
+++ b/simulation/src/simulation_groundtruth/param/label_camera/default.yaml
@@ -1,5 +1,5 @@
 colors:
-  default: [200, 200, 200] # Grey
-  sign: [43, 168, 74] # Kitcar green
-  obstacle: [242, 168, 74] # Kitcar red
-  surface_marking: [59, 32, 242] # Kitcar blue
+  "-1": [200, 200, 200] # Grey
+  "0": [43, 168, 74] # Kitcar green
+  "1": [242, 59, 32] # Kitcar red
+  "2": [36, 100, 255] # Kitcar blue
