--- a/.isort.cfg
+++ b/.isort.cfg
@@ -5,4 +5,4 @@ include_trailing_comma = True
 force_grid_wrap = 0
 use_parentheses = True
 ensure_newline_before_comments = True
-known_third_party = PIL,cachetools,cairo,catkin_pkg,cv2,cv_bridge,gazebo_msgs,gazebo_simulation,geometry_msgs,gi,graphviz,hypothesis,matplotlib,numpy,pyquaternion,python_qt_binding,qt_gui,rosbag,rosnode,rospkg,rospy,rostopic,sensor_msgs,shapely,simulation_brain_link,simulation_evaluation,simulation_groundtruth,std_msgs,std_srvs,tf2_msgs,torch,torchvision,visdom,visualization_msgs,yaml
+known_third_party = PIL,cachetools,cairo,catkin_pkg,cv2,cv_bridge,envyaml,gazebo_msgs,gazebo_simulation,geometry_msgs,gi,graphviz,hypothesis,matplotlib,numpy,pyquaternion,python_qt_binding,qt_gui,rosbag,rosnode,rospkg,rospy,rostopic,sensor_msgs,shapely,simulation_brain_link,simulation_evaluation,simulation_groundtruth,std_msgs,std_srvs,tabulate,tf2_msgs,torch,torchvision,visdom,visualization_msgs,yaml
