--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -90,58 +90,7 @@ test-drive-evaluation:
     # The drive.test is used to evaluate how the car drives.
     # With automatic_drive:=true the path of the car is predetermined and thus the correctness
     # of the evaluation can be tested.
-
-    # #### Road: ci_roads/curves.py ####
-    # Simple left and right curve
-    # Success: Drive on right lane
-  - rostest simulation_evaluation drive.test time_limit:=300 road:=ci_roads/curves automatic_drive:=true
-    # Failure: driving onto the left lane
-  - rostest simulation_evaluation drive.test time_limit:=300 road:=ci_roads/curves automatic_drive:=true
-    path_file:=$PATH_FILES/left_lane.yaml expected_result_state:=3
-    # Failure: by driving off road
-  - rostest simulation_evaluation drive.test time_limit:=300 road:=ci_roads/curves automatic_drive:=true
-    path_file:=$PATH_FILES/off_road.yaml expected_result_state:=3
-
-    # #### Road: ci_roads/obstacles.py ####
-    # Road with multiple obstacles
-    # Failure: Car will hit the obstacles
-  - rostest simulation_evaluation drive.test time_limit:=300 road:=ci_roads/obstacles expected_result_state:=3
-    automatic_drive:=true
-    # Success: Car evades the obstacles
-  - rostest simulation_evaluation drive.test time_limit:=300 road:=ci_roads/obstacles automatic_drive:=true
-    path_file:=$PATH_FILES/obstacles.yaml
-
-    # #### Road: ci_roads/intersection.py ####
-    # Road with an intersection
-  - export INTERSECTION_TURN=0   # Don't turn
-  - export INTERSECTION_RULE=0   # Equal priority
-  - rostest simulation_evaluation drive.test time_limit:=300 road:=ci_roads/intersection automatic_drive:=true
-    # Turn left
-  - export INTERSECTION_TURN=1
-  - export INTERSECTION_RULE=0   # Equal priority
-  - rostest simulation_evaluation drive.test time_limit:=300 road:=ci_roads/intersection automatic_drive:=true
-    # Turn right
-  - export INTERSECTION_TURN=2
-  - export INTERSECTION_RULE=0   # Equal priority
-  - rostest simulation_evaluation drive.test time_limit:=300 road:=ci_roads/intersection automatic_drive:=true
-    # Supposed to yield (failure)
-  - export INTERSECTION_TURN=0
-  - export INTERSECTION_RULE=1
-  - rostest simulation_evaluation drive.test time_limit:=300 road:=ci_roads/intersection automatic_drive:=true
-    expected_result_state:=3
-    # Supposed to stop (failure)
-  - export INTERSECTION_TURN=0
-  - export INTERSECTION_RULE=2
-  - rostest simulation_evaluation drive.test time_limit:=300 road:=ci_roads/intersection automatic_drive:=true
-    expected_result_state:=3
-
-    # #### Road: ci_roads/blocked_area.py ####
-    # Drive around the blocked area
-  - rostest simulation_evaluation drive.test time_limit:=300 road:=ci_roads/blocked_area automatic_drive:=true
-    path_file:=$PATH_FILES/blocked_area.yaml
-    # Drive into the blocked area
-  - rostest simulation_evaluation drive.test time_limit:=300 road:=ci_roads/blocked_area automatic_drive:=true
-    expected_result_state:=3
+  - python3 -m simulation.utils.drive_test.run --config simulation/utils/drive_test/test/example_config.yaml
 
 test-documentation:
   image: git.kitcar-team.de:4567/kitcar/kitcar-gazebo-simulation/ci:docs
