label_camera: Create node to create labels for camera images
The newly added node can automatically create labels for a camera image based on the simulation's groundtruth.

--- a/simulation/src/simulation_groundtruth/CMakeLists.txt
+++ b/simulation/src/simulation_groundtruth/CMakeLists.txt
@@ -58,8 +58,10 @@ add_message_files(
   Lane.msg
   Parking.msg
   LabeledPolygon.msg
+  LabeledBoundingBox.msg
   Line.msg
   GroundtruthStatus.msg
+  ImageLabels.msg
 )
 
 
