--- a/simulation/src/simulation_groundtruth/param/groundtruth/default.yaml
+++ b/simulation/src/simulation_groundtruth/param/groundtruth/default.yaml
@@ -8,6 +8,7 @@ colors:
   parking_spot_occupied: [0.4, 0, 0, 0.5]
   obstacle: [0, 0, 0, 1]
   surface_marking: [1, 0.5, 0, 1]
+  traffic_sign: [0.16796875, 0.65625, 0.2890625, 1]
 
 # Renderer
 tile_size: [4, 4]
