docker: Add kitcar-rosbag to CI image
This allows to record images within the CI without any dependency on kitcar-ros.

--- a/simulation/docker/ci/docker-compose.yaml
+++ b/simulation/docker/ci/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
     image: git.kitcar-team.de:4567/kitcar/kitcar-gazebo-simulation/ci:${CI_IMAGE_TAG}
     build:
       context: .
+      args:
+      - KITCAR_REPO_PATH=${CI_REPO_PATH}
   docs:
     image: git.kitcar-team.de:4567/kitcar/kitcar-gazebo-simulation/ci:${CI_IMAGE_TAG}
     build:
