docker: Prevent kitcar-ros CI from overwriting kitcar-rosbag by moving it

--- a/simulation/docker/kitcar_ros_ci/Dockerfile
+++ b/simulation/docker/kitcar_ros_ci/Dockerfile
@@ -5,7 +5,7 @@ COPY packages.txt /packages.txt
 
 # Copy the simulation into a different directory because /builds is removed by gitlab!
 # The files are copied back into /builds within the CI!
-RUN mkdir -p /home/kitcar && mv /builds/kitcar/kitcar-gazebo-simulation /home/kitcar/kitcar-gazebo-simulation
+RUN mkdir -p /home/kitcar && mv /builds/kitcar /home/
 
 # Install packages from packages file.
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive xargs --arg-file=/packages.txt apt-get install -y
