--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,8 +13,8 @@ repos:
   rev: v1.9.3
   hooks:
   - id: seed-isort-config
-- repo: https://github.com/pre-commit/mirrors-isort
-  rev: v5.5.2
+- repo: https://github.com/PyCQA/isort
+  rev: 5.6.4
   hooks:
   - id: isort
 - repo: https://github.com/myint/docformatter
