--- a/simulation/utils/drive_test/test/example_config.yaml
+++ b/simulation/utils/drive_test/test/example_config.yaml
@@ -21,51 +21,22 @@ default_args:
   mission_mode: 2
   gui: false
   time_limit: 300
-  automatic_drive: true
   must_succeed: true
 
 # A list of tests which should be executed
 tests:
-- desc: Curvy road
-  road: ci_roads/curves
-- desc: Curvy road (drive on the left lane.)
-  road: ci_roads/curves
-  path_file: ${PATH_FILES}/left_lane.yaml
-  expected_result_state: 3
-- desc: Curvy road (drive off road.)
-  road: ci_roads/curves
-  path_file: ${PATH_FILES}/off_road.yaml
-  expected_result_state: 3
-- desc: Intersection straight
-  road: ci_roads/intersection
-  environment:
-    INTERSECTION_RULE: 0
-    INTERSECTION_TURN: 0
-- desc: Intersection left
-  road: ci_roads/intersection
-  environment:
-    INTERSECTION_RULE: 0
-    INTERSECTION_TURN: 1
-- desc: Intersection right
-  road: ci_roads/intersection
-  environment:
+- desc: Intersection right # The name of the Test
+  road: ci_roads/intersection # The road to test on
+  environment: # Some environment variables to adjust the road
     INTERSECTION_RULE: 0
     INTERSECTION_TURN: 2
-- desc: Intersection straight (should yield)
-  road: ci_roads/intersection
-  expected_result_state: 3
-  environment:
-    INTERSECTION_RULE: 1
-    INTERSECTION_TURN: 0
-- desc: Intersection straight (should stop)
-  road: ci_roads/intersection
-  expected_result_state: 3
-  environment:
-    INTERSECTION_RULE: 2
-    INTERSECTION_TURN: 0
-- desc: Road with blocked_area
-  road: ci_roads/blocked_area
-  path_file: ${PATH_FILES}/blocked_area.yaml
-- desc: Road with blocked_area (don't drive around)
-  road: ci_roads/blocked_area
-  expected_result_state: 3
+  # In combination with the default args, this will result in the commands:
+  # $ export INTERSECTION_RULE=0
+  # $ export INTERSECTION_TURN=2
+  # $ rostest simulation_evaluation drive.test mission_mode:=2 gui:=false
+  #   time_limit:=300 road:=ci_roads/intersection
+  # Checkout ``simulation/models/env_db/ci_roads/intersection.py`` to see
+  # how the environment variables are used to modify the road.
+  # Optionally add more ros args! Like:
+  # - seed: KITCAR
+  # - record_rosbag: True
