--- a/simulation/src/gazebo_simulation/param/gazebo_rate_control/topics.yaml
+++ b/simulation/src/gazebo_simulation/param/gazebo_rate_control/topics.yaml
@@ -1,2 +1,4 @@
 set_physics: /gazebo/set_physics_properties
 get_physics: /gazebo/get_physics_properties
+pause_gazebo: /gazebo/pause_physics
+unpause_gazebo: /gazebo/unpause_physics
