--- a/simulation/docker/ci/Dockerfile
+++ b/simulation/docker/ci/Dockerfile
@@ -4,16 +4,16 @@ ARG KITCAR_REPO_PATH=/home/kitcar/
 COPY init/* /
 
 # Ensure that ROS packages are up-to-date
-RUN apt-get update && apt-get upgrade -y
+RUN apt update && apt upgrade -y
 
 # Install packages that are necessary for Gazebo to properly work in a Docker container
-RUN apt-get update && apt-get install -y \
+RUN apt update && apt install -y \
 dbus dbus-x11 libasound2 libasound2-plugins alsa-utils \
 alsa-oss pulseaudio pulseaudio-utils \
 xvfb
 
 # Install packages from packages file.
-RUN apt-get update && DEBIAN_FRONTEND=noninteractive xargs --arg-file=/packages_focal.txt apt-get install -y
+RUN apt update && DEBIAN_FRONTEND=noninteractive xargs --arg-file=/packages_focal.txt apt install -y
 
 # Install pip packages
 RUN pip3 install --upgrade --upgrade-strategy eager --no-warn-script-location \
