Fix ValueError thrown by envyaml if unused variable is defined
This fixes bug ValueError: Strict mode enabled, variable $PATH_TO_CONFIG not defined! in pipelines.
This was caused by updated envyaml. See https://github.com/thesimj/envyaml/pull/4.
Probably a bug in envyaml because $PATH_TO_CONFIG is inside a comment.

--- a/simulation/utils/drive_test/test/ci.yaml
+++ b/simulation/utils/drive_test/test/ci.yaml
@@ -1,6 +1,6 @@
 # This is example config file used for simulalation.utils.drive_test.run
 # You can execute this script with:
-# python3 -m simulation.utils.drive_test.run --config $PATH_TO_CONFIG
+# python3 -m simulation.utils.drive_test.run --config PATH_TO_CONFIG
 
 # A list of columns which should be shown as a result.
 # Every parameter listed in 'tests' can also be a table column howver "conclusion" is a special one: It shows
