docker: Install kitcar-rosbag requirements

--- a/simulation/docker/ci/Dockerfile
+++ b/simulation/docker/ci/Dockerfile
@@ -28,5 +28,5 @@ RUN echo "source /opt/ros/noetic/setup.bash" >> ~/.bashrc
 # Also add and build kitcar-rosbag
 # Needed to record rosbags in CI
 COPY kitcar-rosbag $KITCAR_REPO_PATH/kitcar-rosbag
-RUN /bin/bash -c "source /opt/ros/noetic/setup.bash && cd ${KITCAR_REPO_PATH}/kitcar-rosbag && catkin_make"
+RUN /bin/bash -c "source /opt/ros/noetic/setup.bash && cd ${KITCAR_REPO_PATH}/kitcar-rosbag && pip3 install -r requirements.txt && catkin_make"
 RUN echo "source ${KITCAR_REPO_PATH}/kitcar-rosbag/devel/setup.bash --extend" >> ~/.bashrc
