dvc: Remove lock files and replace url in config
The removed file and adjusted url are useless to people outside of KITcar and thus removed/replaced.

--- a/.dvc/config
+++ b/.dvc/config
@@ -2,4 +2,4 @@
     remote = storage
 ['remote "storage"']
     url = s3://kitcar-gazebo-simulation
-    endpointurl = https://dvc.kitcar-team.de
+    endpointurl = https://dvc.YOUR-REMOTE.de
