docker: Ensure repos are available in ci
To achieve this, a new TMP_KITCAR_REPO_PATH variable is introduced.
And at the end of building the docker image, all repos within
/builds/kitcar (which is deleted by gitlab in the ci) are moved
into a different path (/home/kitcar) and must then be moved back
into their place in the ci.

--- a/simulation/docker/ci/Dockerfile
+++ b/simulation/docker/ci/Dockerfile
@@ -1,5 +1,9 @@
 FROM ros:noetic-robot-focal
-ARG KITCAR_REPO_PATH=/home/kitcar/
+# Actual KITCAR_REPO_PATH for which packages are built!
+ARG KITCAR_REPO_PATH=/builds/kitcar
+# Path where the KITCAR_REPO_PATH is stored at the end of the Dockerfile
+# Necessary to prevent gitlab from overwritting it in the ci!
+ARG TMP_KITCAR_REPO_PATH=/home/kitcar
 
 COPY init/* /
 
@@ -30,3 +34,7 @@ RUN echo "source /opt/ros/noetic/setup.bash" >> ~/.bashrc
 COPY kitcar-rosbag $KITCAR_REPO_PATH/kitcar-rosbag
 RUN /bin/bash -c "source /opt/ros/noetic/setup.bash && cd ${KITCAR_REPO_PATH}/kitcar-rosbag && pip3 install -r requirements.txt && catkin_make"
 RUN echo "source ${KITCAR_REPO_PATH}/kitcar-rosbag/devel/setup.bash --extend" >> ~/.bashrc
+
+# Copy the simulation into a different directory because /builds is removed by gitlab!
+# The files are copied back into /builds within the CI!
+RUN mkdir -p ${TMP_KITCAR_REPO_PATH} && mv ${KITCAR_REPO_PATH}/* ${TMP_KITCAR_REPO_PATH}
