--- a/data/simulated_images/dvc.yaml
+++ b/data/simulated_images/dvc.yaml
@@ -5,7 +5,9 @@ stages:
       kitcar11 kitcar12 kitcar13 kitcar14 kitcar15 kitcar16 kitcar17 kitcar18 kitcar19 kitcar20
       kitcar21 kitcar22 kitcar23 kitcar24 kitcar25 kitcar26 kitcar27 kitcar28 kitcar29 kitcar30
       kitcar31 kitcar32 kitcar33 kitcar34 kitcar35 kitcar36 kitcar37 kitcar38 kitcar39 kitcar40
-      --output_dir random_roads --image_topic /camera/image_raw && fdupes -dN random_roads/ # Remove duplicates
+      kitcar41 kitcar42 kitcar43 kitcar44 kitcar45 kitcar46 kitcar47 kitcar48 kitcar49 kitcar40
+      kitcar51 kitcar52 kitcar53 kitcar54 kitcar55 kitcar56 kitcar57 kitcar58 kitcar59 kitcar60
+      kitcar61 --output_dir random_roads --image_topic /camera/image_raw && fdupes -dN random_roads/ # Remove duplicates
     deps:
     - ../../simulation/models/env_db/ci_roads/random_road.py
     - ../../simulation/models/meshes
