--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,7 +79,7 @@ test-machine-learning-package:
   - python3 -m simulation.utils.machine_learning.cycle_gan.models.test
   - python3 -m simulation.utils.machine_learning.data.test
     # Test if the camera publishes images with the cycle gan turned on
-  - dvc pull simulation/utils/machine_learning/cycle_gan/checkpoints/dr_drift_256/latest_net_g_b_to_a.pth
+  - dvc pull simulation/utils/machine_learning/cycle_gan/checkpoints/dr_drift/latest_net_g_b_to_a.pth
   - git lfs pull --include=simulation/utils/machine_learning/cycle_gan/resources/mask.png
   - rostest simulation_brain_link sensor_camera.test apply_gan:=true use_wasserstein_gan:=false
   - rostest simulation_brain_link sensor_camera.test apply_gan:=true use_wasserstein_gan:=true
@@ -152,28 +152,21 @@ build-documentation:
     INIT_INPUT: 1\nyy
     GIT_LFS_SKIP_SMUDGE: '1'  # Don't pull Git LFS
     CUDA_VISIBLE_DEVICES: ""   # Don't use CUDA in CI
-  tags:
-  - workstation
   script:
-  - git lfs pull --include=simulation/utils/machine_learning/cycle_gan/resources/mask.png
-  - dvc pull data/real_images/maschinen_halle_parking
-  - dvc pull data/simulated_images/test_images
-  - cd simulation/utils/machine_learning/cycle_gan
-    # pull cache from server and checkout
-  - dvc pull dvc.yaml --run-cache
-    # Test current model, make videos and commit to dvc
-  - dvc repro test_dr_drift_256 -s
-  - dvc repro test_discriminators_dr_drift_256 -s
-  - dvc repro make_video_dr_drift_256 -s
-  - cd ../../../../
+    # pull from server
+  - dvc pull simulation/utils/machine_learning/cycle_gan/results/dr_drift/stacked.mp4
+  - dvc pull simulation/utils/machine_learning/cycle_gan/results/dr_drift/discriminator_losses.txt
+  - dvc pull simulation/utils/machine_learning/cycle_gan/checkpoints/dr_drift/loss.png
     # Create content for the report.md
-  - echo "# Dr Drift 256" >> report.md
+  - echo "# Dr Drift" >> report.md
   - echo "## Test Generators" >> report.md
-  - cml-publish simulation/utils/machine_learning/cycle_gan/results/dr_drift_256/stacked.mp4 --gitlab-uploads
-    --md --title 'MP4' >> report.md
+  - L="$(cml-publish simulation/utils/machine_learning/cycle_gan/results/dr_drift/stacked.mp4
+    --gitlab-uploads)"
+  - echo "![]($L)" >> report.md
+  - echo "[Link to mp4]($L)" >> report.md
   - echo "<br>" >> report.md
   - echo "## Test Discriminators" >> report.md
-  - losses=`cat simulation/utils/machine_learning/cycle_gan/results/dr_drift_256/discriminator_losses.txt`
+  - losses=`cat simulation/utils/machine_learning/cycle_gan/results/dr_drift/discriminator_losses.txt`
   - A="$(cut -d',' -f1 <<<"$losses")"
   - B="$(cut -d',' -f2 <<<"$losses")"
   - echo "**AVG-Loss Discriminator A =** $A" >> report.md
@@ -181,8 +174,8 @@ build-documentation:
   - echo "**AVG-Loss Discriminator B =** $B" >> report.md
   - echo "<br>" >> report.md
   - echo "## Loss values" >> report.md
-  - cml-publish simulation/utils/machine_learning/cycle_gan/checkpoints/dr_drift_256/loss.png
-    --gitlab-uploads --md --title 'Loss values' >> report.md
+  - cml-publish simulation/utils/machine_learning/cycle_gan/checkpoints/dr_drift/loss.png --gitlab-uploads
+    --md --title 'Loss values' >> report.md
     # Send report.md as comment
   - cml-send-comment report.md
 
