--- a/simulation/utils/machine_learning/cycle_gan/dvc.yaml
+++ b/simulation/utils/machine_learning/cycle_gan/dvc.yaml
@@ -1,53 +1,55 @@
 stages:
-  train_dr_drift_256:
+  train_dr_drift:
     cmd: python3 train.py
     deps:
     - ./../../../../data/real_images/beg_2019
     - ./../../../../data/real_images/maschinen_halle
     - ./../../../../data/real_images/maschinen_halle_no_obstacles
     - ./../../../../data/simulated_images/random_roads
-    - configs
+    - configs/base_options.py
+    - configs/train_options.py
     outs:
-    - checkpoints/dr_drift_256/latest_net_d_a.pth
-    - checkpoints/dr_drift_256/latest_net_d_b.pth
-    - checkpoints/dr_drift_256/latest_net_g_a_to_b.pth
-    - checkpoints/dr_drift_256/latest_net_g_b_to_a.pth
-    - checkpoints/dr_drift_256/loss_log.txt
-    - checkpoints/dr_drift_256/loss.png
-  test_dr_drift_256:
+    - checkpoints/dr_drift/latest_net_d_a.pth
+    - checkpoints/dr_drift/latest_net_d_b.pth
+    - checkpoints/dr_drift/latest_net_g_a_to_b.pth
+    - checkpoints/dr_drift/latest_net_g_b_to_a.pth
+    - checkpoints/dr_drift/loss_log.txt
+    - checkpoints/dr_drift/loss.png
+  test_dr_drift:
     cmd: python3 test.py
     deps:
     - ./../../../../data/real_images/maschinen_halle_parking
     - ./../../../../data/simulated_images/test_images
-    - checkpoints/dr_drift_256/latest_net_g_a_to_b.pth
-    - checkpoints/dr_drift_256/latest_net_g_b_to_a.pth
-    - configs
+    - checkpoints/dr_drift/latest_net_g_a_to_b.pth
+    - checkpoints/dr_drift/latest_net_g_b_to_a.pth
+    - configs/base_options.py
+    - configs/test_options.py
     outs:
-    - results/dr_drift_256/images
-  make_video_dr_drift_256:
-    cmd: python3 -m simulation.utils.machine_learning.data.images_to_video --image_pattern results/dr_drift_256/images/fake_a/%d.png
-      --output_file results/dr_drift_256/fake_a.mp4 && python3 -m simulation.utils.machine_learning.data.images_to_video
-      --image_pattern results/dr_drift_256/images/real_b/%d.png --output_file results/dr_drift_256/real_b.mp4
-      && ffmpeg -y -i results/dr_drift_256/real_b.mp4 -i results/dr_drift_256/fake_a.mp4 -filter_complex
-      vstack=inputs=2 results/dr_drift_256/stacked.mp4
+    - results/dr_drift/images
+  make_video_dr_drift:
+    cmd: python3 -m simulation.utils.machine_learning.data.images_to_video --image_pattern results/dr_drift/images/fake_a/%d.png
+      --output_file results/dr_drift/fake_a.mp4 && python3 -m simulation.utils.machine_learning.data.images_to_video
+      --image_pattern results/dr_drift/images/real_b/%d.png --output_file results/dr_drift/real_b.mp4
+      && ffmpeg -y -i results/dr_drift/real_b.mp4 -i results/dr_drift/fake_a.mp4 -filter_complex
+      vstack=inputs=2 results/dr_drift/stacked.mp4
     deps:
-    - results/dr_drift_256/images/fake_a
-    - results/dr_drift_256/images/real_b
+    - results/dr_drift/images/fake_a
+    - results/dr_drift/images/real_b
     outs:
-    - results/dr_drift_256/fake_a.mp4
-    - results/dr_drift_256/real_b.mp4
-    - results/dr_drift_256/stacked.mp4
-  test_discriminators_dr_drift_256:
+    - results/dr_drift/fake_a.mp4
+    - results/dr_drift/real_b.mp4
+    - results/dr_drift/stacked.mp4
+  test_discriminators_dr_drift:
     cmd: python3 test_discriminators.py
     deps:
     - ./../../../../data/real_images/maschinen_halle_parking
     - ./../../../../data/simulated_images/test_images
-    - checkpoints/dr_drift_256/latest_net_g_a_to_b.pth
-    - checkpoints/dr_drift_256/latest_net_g_b_to_a.pth
-    - checkpoints/dr_drift_256/latest_net_d_a.pth
-    - checkpoints/dr_drift_256/latest_net_d_b.pth
+    - checkpoints/dr_drift/latest_net_g_a_to_b.pth
+    - checkpoints/dr_drift/latest_net_g_b_to_a.pth
+    - checkpoints/dr_drift/latest_net_d_a.pth
+    - checkpoints/dr_drift/latest_net_d_b.pth
     - test_discriminators.py
     - configs/base_options.py
     - configs/test_options.py
     outs:
-    - results/dr_drift_256/discriminator_losses.txt
+    - results/dr_drift/discriminator_losses.txt
