--- a/data/labeled_images/dvc.yaml
+++ b/data/labeled_images/dvc.yaml
@@ -11,11 +11,11 @@ stages:
     - random_roads
 
   apply_cycle_gan_to_random_roads_labeled:
-    cmd: python3 -m simulation.utils.machine_learning.cycle_gan.ros_connector --input_dir random_roads/
+    cmd: python3 -m simulation.utils.machine_learning.cycle_gan.image_translator --input_dir random_roads/
       --output_dir gan_random_roads && cp random_roads/labels.yaml gan_random_roads
     deps:
     - random_roads
-    - ../../simulation/utils/machine_learning/cycle_gan/ros_connector.py
+    - ../../simulation/utils/machine_learning/cycle_gan/image_translator.py
     - ../../simulation/utils/machine_learning/cycle_gan/checkpoints/dr_drift/latest_net_g_a_to_b.pth
     - ../../simulation/utils/machine_learning/cycle_gan/checkpoints/dr_drift/latest_net_g_b_to_a.pth
     outs:
