--- a/data/labeled_images/dvc.yaml
+++ b/data/labeled_images/dvc.yaml
@@ -1,8 +1,10 @@
 stages:
   create_labeled_train_images:
     cmd: python3 -m simulation.utils.machine_learning.data.extract_simulated_images --road ci_roads/random_road
-      --seed kitcar1 kitcar2 --output_dir random_roads --image_topic /camera/image_raw --label_camera
-      --control_sim_rate --label_image_topic /simulation/label_camera/image --label_topic /simulation/label_camera/image_labels
+      --seed kitcar1 kitcar2 kitcar3 kitcar4 kitcar5 kitcar6 kitcar7 kitcar8 kitcar9 kitcar10
+      kitcar11 kitcar12 kitcar13 kitcar14 kitcar15 kitcar16 kitcar17 kitcar18 kitcar19 kitcar20
+      --output_dir random_roads --image_topic /camera/image_raw --label_camera --control_sim_rate
+      --label_image_topic /simulation/label_camera/image --label_topic /simulation/label_camera/image_labels
       --label_file random_roads/labels.yaml && fdupes -dN random_roads/ && fdupes -dN random_roads/debug # Remove duplicates
     deps:
     - ../../simulation/models/env_db/ci_roads/random_road.py
