camera&image_translator: Preserve part of original image
Optionally the gan can be used to only overlay the original image and modify it slightly instead of completely changing it. Two parameters can be used to variably adjust how much of the original image is kept.

Colored pixels are used to prevent the GAN from changing traffic signs so much that they are no longer recognizable.

--- a/simulation/src/gazebo_simulation/param/car_specs/dr_drift/camera.yaml
+++ b/simulation/src/gazebo_simulation/param/car_specs/dr_drift/camera.yaml
@@ -1,4 +1,4 @@
-capture_format: L8
+capture_format: RGB8
 focal_length_x: 382.192834
 focal_length_y: 382.192834
 image_topic: /simulation/sensors/raw/camera
