--- a/init/requirements_machine_learning.txt
+++ b/init/requirements_machine_learning.txt
@@ -1,5 +1,7 @@
-torch>=0.4.1
-torchvision>=0.2.1
 dominate>=2.3.1
 visdom>=0.1.8.3
 matplotlib>=3.2.1
+-i https://download.pytorch.org/whl/torch_stable.html
+torch==1.8.0+cu111
+-i https://download.pytorch.org/whl/torch_stable.html
+torchvision==0.9.0+cu111
