--- a/init/requirements.txt
+++ b/init/requirements.txt
@@ -10,6 +10,6 @@ rospkg>=1.1.10
 Shapely>=1.6.4.post2
 hypothesis>=5.12.0
 pre-commit>=1.21.0
-dvc[all]
+dvc[all]==1.11.16
 tabulate>=0.8.7
 graphviz
