--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -134,8 +134,8 @@ test-documentation:
   variables:
     INIT_INPUT: 1\nyy
   script:
-  # Download gan video for documentation
-  - dvc pull docs/content/tutorials/resources/gan_default_road.mp4
+    # Get DVC files
+  - dvc pull -R docs
     # Test if the onboarding documentation is correct
   - python3 docs/content/tutorials/road_examples/example.py
   - cd docs
@@ -152,8 +152,8 @@ build-documentation:
   variables:
     INIT_INPUT: 1\nyy
   script:
-    # Download gan video for documentation
-  - dvc pull docs/content/tutorials/resources/gan_default_road.mp4
+    # Get DVC files
+  - dvc pull -R docs
     # Build the documentation
   - cd docs
   - make html
