--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -161,10 +161,16 @@ build-documentation:
     - docs/_build/html/*
     expire_in: 2 day
 
-.cml-cyclegan-template:
+cml-cyclegan:
   stage: deploy
   image: git.kitcar-team.de:4567/kitcar/kitcar-gazebo-simulation/ci:machine_learning
   needs: []
+  rules:
+  - if: '$CI_COMMIT_REF_NAME == "master"'
+  - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+    when: never
+  - when: manual
+  allow_failure: true
   variables:
     INIT_INPUT: 1\nyy
     GIT_LFS_SKIP_SMUDGE: '1'  # Don't pull Git LFS
@@ -204,25 +210,18 @@ build-documentation:
     # Send report.md as comment
   - cml-send-comment report.md
 
-cml-cyclegan-master:
-  extends: .cml-cyclegan-template
-  # Always run on master
-  only:
-  - master
-
-cml-cyclegan:
-  extends: .cml-cyclegan-template
-  # Allow to manually run cml
-  except:
-  - master
-  when: manual
-
 # Build and deploy the CI docker image to the gitlab registry
 # This is done everytime the master branch is updated
-.docker-images-template:
+docker-images:
   stage: deploy
   image: docker:19.03.13
   needs: ["build-code"]
+  rules:
+  - if: '$CI_COMMIT_REF_NAME == "master"'
+  - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+    when: never
+  - when: manual
+  allow_failure: true
   tags:
   - docker
   services:
@@ -276,23 +275,15 @@ cml-cyclegan:
   # Clean up
   - rm -rf $KITCAR_REPO_PATH/kitcar-rosbag
 
-deploy-docker-images-master:
-  extends: .docker-images-template
-  # Always run on master
-  only:
-  - master
-
-deploy-docker-images:
-  extends: .docker-images-template
-  # Allow to manually build the ci image
-  # E.g. to test if the Dockerfile is still working
-  except:
-  - master
-  when: manual
-
-.dvc-repro-images:
+dvc-repro-images:
   image: git.kitcar-team.de:4567/kitcar/kitcar-gazebo-simulation/ci:machine_learning
   needs: ["build-code"]
+  rules:
+  - if: '$CI_COMMIT_REF_NAME == "master"'
+  - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+    when: never
+  - when: manual
+  allow_failure: true
   stage: deploy
   variables:
     INIT_INPUT: 1\nyy
@@ -355,14 +346,3 @@ deploy-docker-images:
     paths:
     - data/labeled_images/dvc.lock
     - data/simulated_images/dvc.lock
-
-dvc-repro-images-master:
-  extends: .dvc-repro-images
-  only:
-  - master
-
-dvc-repro-images:
-  extends: .dvc-repro-images
-  except:
-  - master
-  when: manual
