--- a/simulation/docker/ci/DockerfileDocs
+++ b/simulation/docker/ci/DockerfileDocs
@@ -1,5 +1,9 @@
 ARG PARENT_TAG=ci
 FROM git.kitcar-team.de:4567/kitcar/kitcar-gazebo-simulation/ci:${PARENT_TAG}
 
-RUN pip3 install --upgrade --upgrade-strategy eager --no-warn-script-location \
+RUN pip3 install \
+    --no-cache-dir \
+    --upgrade \
+    --upgrade-strategy eager \
+    --no-warn-script-location \
     -r /requirements_documentation.txt
