--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,6 +44,10 @@ repos:
   rev: 3.8.4
   hooks:
   - id: flake8
+- repo: git://github.com/detailyang/pre-commit-shell
+  rev: 1.0.5
+  hooks:
+  - id: shell-lint
 - repo: https://github.com/asottile/pyupgrade
   rev: v2.10.0
   hooks:
